syntax = "proto3";

package api.note_v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/impopov/note-server-api/pkg/note_v1";

service NoteServiceV1 {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote (GetNoteRequest) returns (GetNoteResponse);
  rpc GetListNote (Empty) returns (GetListNoteResponse);
  rpc UpdateNote (UpdateNoteRequest) returns (Empty);
  rpc DeleteNote (DeleteNoteRequest) returns (Empty);
}

message Empty{}

message Note {
  int64 id = 1;
  string title = 2;
  string text = 3;
  string author = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateNoteRequest {
  string title = 1;
  string text = 2;
  string author = 3;
}

message CreateNoteResponse {
  int64 id = 1;
}

message GetNoteRequest {
  int64 id = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message GetListNoteResponse {
  repeated Note note = 1;
}

message UpdateNoteRequest {
  Note note = 1;
}

message DeleteNoteRequest {
  int64 id = 1;
}
